# multi-agentic-solution

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  init-db.sql  pyproject.toml  run_migration.py
airflow/: Dockerfile
airflow/dags/: doc_processor.py  hello_world_s3_dag.py
alembic/: env.py
alembic/versions/: 2025_01_01_0000-001_initial_schema.py
src/: Dockerfile  __init__.py  config.py  main.py
src/agents/: __init__.py  data_agent.py  db_helpers.py  ddl_agent.py  doc_parser_agent.py  feedback_parser.py  graph.py  human_approval.py  state.py  supervisor.py  tools.py
src/api/v1/: agents.py  generate.py  health.py  metadata.py  search.py
src/models/: __init__.py  base.py  ddl.py  metadata.py  synthetic_data.py
src/schemas/: ddl.py  metadata.py  search.py  synthetic_data.py
src/services/: database.py  document_parser.py  embeddings.py  hybrid_search.py  llm.py  parser.py  s3.py  validator.py
src/utils/: auth.py  database.py  logger.py  thread_helpers.py  validators.py
ui/: Dockerfile  app.py
ui/components/: agent_interface.py  chat.py  ddl_generator.py  document_processor.py  document_processor.py.bak  search.py  synthetic_data_generator.py
