[project]
name = "multi-agentic-solution"
version = "0.1.0"
description = "Multi-Agentic Solution for DDL & Synthetic Data Generation"
authors = [
    {name = "Sim Singh", email = "sim@simsingh.net"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # FastAPI and web framework
    "fastapi>=0.119.0,<0.121.0",  # Pinned below 0.121 for stability (0.119.0 well-tested)
    "uvicorn[standard]>=0.27.0",  # Updated from 0.24.0
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",  # Updated from 0.25.0
    "sse-starlette>=1.8.2",  # ADDED - missing critical dependency for SSE streaming

    # Database and ORM
    "sqlalchemy>=2.0.44",  # Updated from 2.0.23 to match uv.lock
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "psycopg[binary]>=3.1.0",  # Required for langgraph-checkpoint-postgres

    # AWS and cloud services
    "aioboto3>=15.4.0",  # Updated from 12.3.0 to match uv.lock
    "boto3>=1.40.49",  # Updated from 1.34.0 to match uv.lock

    # Redis (asyncio support built-in for 7.x, no extra needed)
    "redis>=7.0.1",  # Updated from 5.0.1, async support included

    # OpenSearch
    "opensearch-py[async]>=2.4.0",

    # LangChain and LangGraph (CRITICAL - Not in arxiv-paper-curator)
    "langchain>=0.1.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-aws>=0.0.1",
    "langchain-community>=0.0.10",

    # Document parsing
    "docling==2.15.0",  # PINNED - 2.58.0 has breaking changes (DO NOT UPGRADE)
    "pymupdf>=1.24.0",  # Fast and reliable PDF text extraction
    "python-docx>=1.1.0",  # Word document parsing for metadata extraction

    # Data validation and serialization
    "pydantic>=2.11.10",  # Updated from 2.5.0 to match uv.lock
    "pydantic-settings>=2.1.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",  # For JWT token handling

    # Logging
    "structlog>=24.1.0",  # Updated from 23.2.0
    "python-json-logger>=2.0.7",

    # Utilities
    "python-dotenv>=1.0.0",
    "sqlparse>=0.4.4",
    "pandas>=2.1.4",

    # Gradio UI
    "gradio>=5.49.1",  # MAJOR UPDATE from 4.8.0 to match uv.lock (Gradio 5.x with SSR)

    # LLM Observability (ADDED from arxiv-paper-curator)
    "langfuse>=2.0.0,<3.0.0",  # NEW - LLM tracing, monitoring, and cost tracking

    # Jupyter and validation notebooks
    "jupyter>=1.0.0",
    "ipykernel>=6.27.1",
    "notebook>=7.0.6",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # HTTP client for API testing
    "requests>=2.31.0",

    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",

    # Code quality
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "pre-commit>=4.0.0",  # ADDED from arxiv-paper-curator - enforces code quality hooks

    # Utilities
    "tiktoken>=0.5.0",
    "rich>=13.7.0",

    # Note: Airflow runs in separate container, not included here
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "docling.*",
    "langgraph.*",
    "langchain.*",
    "opensearchpy.*",
]
ignore_missing_imports = true
